# MusicCatalogue

./: .editorconfig  .entrypoint.sh  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
catalogue/: urls.py  views.py
chat/: urls.py
local/: settings.dev.py
musicapi/: .entrypoint.sh  .gitignore  Dockerfile  asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
musicapi/catalogue/: models.py  serializers.py  urls.py  views.py
musicapi/catalogue/templates/catalogue/: swagger-ui.html
musicapi/chat/: consumers.py  urls.py
musicapi/chat/templates/chat/: lobby.html
musicapi/musicapi/: asgi.py  settings.py  urls.py
musicapi/settings/: __init__.py  base.py  custom.settings.py  docker.py  envvars.py  logging.py
musicapi/settings/templates/: settings.dev.py
musicapi/utils/: collections.py  misc.py  settings.py
scripts/: entrypoint.sh  production_data.py
