[tool.poetry]
name = "musiccatalogue"
version = "0.1.0"
description = "Music Catalogue Api with Realtime chat"
authors = ["oaksas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
channels = "^4.0.0"
djangorestframework = "^3.14.0"
uritemplate = "^4.1.1"
pytz = "^2024.1"
pyyaml = "^6.0.1"
sqlparse = "^0.4.4"
tzdata = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
